--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+ZOOM_API_URL=https://api.zoom.us/v2/
+ZOOM_API_KEY=o_XZlpA0SvWdbX88RYk3VQ
+ZOOM_API_SECRET=zRZAUczYMnnxIn6BCcdUbugVmuDvfXw8iUXg
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -24,13 +28,14 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=ilelaboyealekan@gmail.com
+MAIL_PASSWORD=gdiqyyrjqahevekr
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=ilelaboyealekan@gmail.com
+MAIL_FROM_NAME=QuicHealth
+APP_FRONTEND=http://127.0.0.1:3000
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
