--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.4|^8.1",
         "darkaonline/l5-swagger": "^8.0",
+        "fakerphp/faker": "^1.19",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
@@ -17,11 +18,9 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4.4",
         "tymon/jwt-auth": "^1.0"
-
     },
     "require-dev": {
         "facade/ignition": "^2.0",
-        "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.3",
         "phpunit/phpunit": "^8.5.8|^9.3.3"
@@ -38,7 +37,9 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         },
         "classmap": [
             "database/seeds",
