--- a/composer.json
+++ b/composer.json
@@ -8,22 +8,22 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4|^8.1",
+        "php": "^8.0",
         "darkaonline/l5-swagger": "^8.0",
-        "fakerphp/faker": "^1.19",
-        "fideloper/proxy": "^4.4",
+        "fakerphp/faker": "^1.9.1",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
-        "laravel/framework": "^8.29",
+        "guzzlehttp/guzzle": "^6.3.1|^7.2",
+        "laravel/framework": "^9.1.0",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4.4",
+        "spatie/laravel-webhook-client": "^3.1",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.0",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.3",
-        "phpunit/phpunit": "^8.5.8|^9.3.3"
+        "spatie/laravel-ignition": "^1.2.3",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^6.2.0",
+        "phpunit/phpunit": "^8.5.8|^9.5.8"
     },
     "config": {
         "optimize-autoloader": true,
