--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "darkaonline/l5-swagger": "^8.0",
         "fakerphp/faker": "^1.9.1",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.3.1|^7.2",
+        "guzzlehttp/guzzle": "^7.4",
         "laravel/framework": "^9.1.0",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4.4",
