added flutterwave api

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ LOG_CHANNEL=stack
 ZOOM_CLIENT_KEY=7nLfrt7nSHuzhcujbUdp8g
 ZOOM_CLIENT_SECRET=4t5atjas60Hdbj4dOrUDdPuCg5YGaGsTSjuw
 
+FLW_PUBLIC_KEY=FLWPUBK_TEST-76f3dd058cc30814af6c917dcd8b700b-X # can be gotten from the dashboard
+FLW_SECRET_KEY=FLWSECK_TEST-ebc5f08a317bbe52184ed12279b4b87b-X # can be gotten from the dashboard
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
