--- a/composer.json
+++ b/composer.json
@@ -62,15 +62,6 @@
             "@php artisan package:discover --ansi"
         ],
 
-        "post-install-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize",
-            "chmod -R 777 storage",
-            "@php artisan clear-compiled",
-            "@php artisan config:clear",
-            "@php artisan cache:clear"
-        ],
-
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
@@ -79,8 +70,14 @@
             "@php artisan key:generate --ansi"
         ],
 
-        "post-update-cmd": [
-            "php artisan migrate:fresh"
+         "post-install-cmd": [
+            "php artisan clear-compiled",
+            "php artisan optimize",
+            "php artisan migrate:fresh",
+            "chmod -R 777 storage",
+            "@php artisan clear-compiled",
+            "@php artisan config:clear",
+            "@php artisan cache:clear"
         ]
 
     }
