--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -26,3 +26,6 @@ jobs:
         with:
           php-version: '8.1'
           extensions: mbstring, ctype, fileinfo, openssl, PDO, bcmath, json, tokenizer, xml
+
+      - name: Install composer dependencies
+        run: composer install --no-dev --no-interaction --prefer-dist
