--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "laravel/ui": "^3.4.4",
         "lorisleiva/laravel-actions": "^2.4",
         "macsidigital/laravel-zoom": "^5.0",
-        "php-open-source-saver/jwt-auth": "^1.4"
+        "php-open-source-saver/jwt-auth": "^1.4",
+      "ext-pdo": "*"
     },
     "require-dev": {
         "mockery/mockery": "^1.4.4",
