--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -1,15 +1,11 @@
 name: Deploy Application
 
 on:
-
   push:
-
     branches:
       - master
 
-
 jobs:
-
   create-deployment-artifacts:
     name: Create deployment artifacts
     runs-on: ubuntu-latest
@@ -24,8 +20,11 @@ jobs:
       - name: Configure PHP 8.1
         uses: shivammathur/setup-php@master
         with:
-          php-version: '8.1'
+          php-version: "8.1"
           extensions: mbstring, ctype, fileinfo, openssl, PDO, bcmath, json, tokenizer, xml
 
       - name: Install composer dependencies
         run: composer install --no-dev --no-interaction --prefer-dist
+
+      - name: Create deployment artifact
+        run: tar -crf app.tar.gz --exclude=*.git --exclude=node_modules *
