work in progress

--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -27,4 +27,4 @@ jobs:
         run: composer install --no-dev --no-interaction --prefer-dist
 
       - name: Create deployment artifact
-        run: tar -crf app.tar.gz --exclude=*.git --exclude=node_modules *
+        run: tar -czf app.tar.gz --exclude=*.git --exclude=node_modules *
