--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     outputs:
-      deployment-matrix: ${{ steps.export-deployment-matrix.outputs.deployment-matix }}
+      DEPLOYMENT_MATRIX: ${{ steps.export-deployment-matrix.outputs.DEPLOYMENT_MATRIX }}
 
     steps:
       - uses: actions/checkout@v3
@@ -47,20 +47,21 @@ jobs:
       - name: Export deployment matrix
         id: export-deployment-matrix
         run: |
+          delimiter="$(openssl rand -hex 8)"
           JSON="$(cat ./deployment_config.json)"
-          JSON="${JSON//'%'/'%25'}"
-          JSON="${JSON//$'\n'/'%0A'}"
-          JSON="${JSON//$'\r'/'%0D'}"
-          echo "::set-output name=deployment-matrix::$JSON"
+          echo "DEPLOYMENT_MATRIX<<${delimiter}" >> "${GITHUB_OUTPUT}"
+          echo "$JSON" >> "${GITHUB_OUTPUT}"
+          echo "${delimiter}" >> "${GITHUB_OUTPUT}"
 
   prepare-release-on-server:
+    name: "${{ matrix.server.name }}: Prepare release"
     runs-on: ubuntu-latest
 
     needs: create-deployment-artifacts
 
     strategy:
       matrix:
-        server: ${{ fromJson(needs.create-deployment-artifacts.outputs.deployment-matrix) }}
+        server: ${{ fromJson(needs.create-deployment-artifacts.outputs.DEPLOYMENT_MATRIX) }}
 
     steps:
       - uses: actions/download-artifact@v3
