--- a/deployment_config.json
+++ b/deployment_config.json
@@ -10,10 +10,10 @@
 
         "port":"22",
 
-        "beforeHooks":"",
+        "beforeHooks": "chmod -R 0777 ${RELEASE_PATH}/storage",
 
         "afterHooks":"",
 
-        "path": "/var/www"
+        "path": "/var/www/quichealth"
     }
 ]
