--- a/deployment_config.json
+++ b/deployment_config.json
@@ -10,7 +10,7 @@
 
         "port":"22",
 
-        "beforeHooks": "chmod -R 0777 ${RELEASE_PATH}/storage",
+        "beforeHooks": "echo ${RELEASE_PATH}",
 
         "afterHooks":"",
 
