work in progress

--- a/deployment_config.json
+++ b/deployment_config.json
@@ -4,7 +4,7 @@
 
         "ip":"159.65.31.130",
 
-        "username":"root",
+        "username":"quichealth",
 
         "password":"quic4Health",
 
