--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -96,6 +96,7 @@ jobs:
 
             mkdir -p ${{ matrix.server.path }}/storage/{app,public,framework,logs}
             mkdir -p ${{ matrix.server.path }}/storage/framework/{cache,sessions,testing,views}
+            mkdir -p ${{ matrix.server.path }}/storage/framework/cache/data
             chmod -R 0777 ${{ matrix.server.path }}/storage
 
   run-before-hooks:
@@ -160,3 +161,66 @@ jobs:
             ln -s -f $STORAGE_PATH $RELEASE_PATH
             ln -s -n -f $RELEASE_PATH $ACTIVE_RELEASE_PATH
             service php8.1-fpm reload
+
+  run-after-hooks:
+    name: "${{ matrix.server.name }}: After hook"
+    runs-on: ubuntu-latest
+
+    needs:
+      [
+        create-deployment-artifacts,
+        prepare-release-on-servers,
+        activate-release,
+      ]
+    strategy:
+      matrix:
+        server: ${{ fromJson(needs.create-deployment-artifacts.outputs.DEPLOYMENT_MATRIX) }}
+    steps:
+      - name: Run After hooks
+        uses: appleboy/ssh-action@master
+        env:
+          GITHUB_SHA: ${{ github.sha }}
+          RELEASE_PATH: ${{ matrix.server.path }}/releases/${{ github.sha }}
+          ACTIVE_RELEASE_PATH: ${{ matrix.server.path }}/current
+          STORAGE_PATH: ${{ matrix.server.path }}/storage
+          BASE_PATH: ${{ matrix.server.path }}
+
+        with:
+          host: ${{ matrix.server.ip }}
+          username: ${{ matrix.server.username }}
+          key: ${{ secrets.SSH_ROOT_KEY }}
+          port: ${{ matrix.server.port }}
+          envs: GITHUB_SHA,RELEASE_PATH,ACTIVE_RELEASE_PATH,STORAGE_PATH,BASE_PATH
+          script: |
+            ${{ matrix.server.afterHooks }}
+
+  clean-up:
+    name: "${{ matrix.server.name }}: Clean Up"
+    runs-on: ubuntu-latest
+
+    needs:
+      [
+        create-deployment-artifacts,
+        prepare-release-on-servers,
+        activate-release,
+        run-after-hooks,
+      ]
+    strategy:
+      matrix:
+        server: ${{ fromJson(needs.create-deployment-artifacts.outputs.DEPLOYMENT_MATRIX) }}
+    steps:
+      - name: Run clean up
+        uses: appleboy/ssh-action@master
+        env:
+          RELEASE_PATH: ${{ matrix.server.path }}/releases
+          ARTIFACT_PATH: ${{ matrix.server.path }}/artifacts
+
+        with:
+          host: ${{ matrix.server.ip }}
+          username: ${{ matrix.server.username }}
+          key: ${{ secrets.SSH_ROOT_KEY }}
+          port: ${{ matrix.server.port }}
+          envs: RELEASE_PATH,ARTIFACT_PATH
+          script: |
+            cd $RELEASE_PATH && ls -t -1 | tail -n +6 | xargs rm -rf;
+            cd $ARTIFACT_PATH && ls -t -1 | tail -n +6 | xargs rm -rf;
