--- a/.github/workflows/deploy-application.yml
+++ b/.github/workflows/deploy-application.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Compile css and Javascript
         run: |
           npm install
+          npm audit fix --force
           npm run prod
 
       - name: Configure PHP 8.1
